[package]
name = "kemutil"
version = "0.1.0"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pqcrypto = { path = "../../pqcrypto/pqcrypto", optional = true}
csidh-rust = { path = "../../csidh-rust/", optional = true }
oqs = {path = "../../oqs-rs/oqs/", optional = true }

[features]
pqclean = ["pqcrypto", "csidh-rust"]
liboqs = ["oqs"]
